add finish and summarize
