# internal/handler/v1/session.go
@@ -22,9 +22,56 @@ func newSession(
 	}
 
 	mux.HandleFunc(
+		Url(http.MethodGet, "/sessions"),
+		authMwr.MwrFunc(s.list),
+	)
+
+	mux.HandleFunc(
 		Url(http.MethodPost, "/sessions"),
 		authMwr.MwrFunc(s.create),
 	)
+
+	mux.HandleFunc(
+		Url(http.MethodPost, "/sessions/{id}/summarize"),
+		authMwr.MwrFunc(s.summarize),
+	)
+
+	mux.HandleFunc(
+		Url(http.MethodPost, "/sessions/{id}/cancel"),
+		authMwr.MwrFunc(s.cancel),
+	)
+}
+
+// @Summary get session list for auth user
+// @Tags sessions
+// @Security BearerAuth
+// @Router /v1/sessions [get]
+// @Param pagination[page] query int false "page"
+// @Param pagination[count] query int false "count"
+// @Produce json
+// @Success 200 {object} response.list{data=[]model.Session,pagination=dto.Pagination}
+func (s *session) list(w http.ResponseWriter, r *http.Request) {
+	const op = "v1.session.list"
+
+	user, err := request.GetAuthUser(r)
+	if err != nil {
+		response.JsonFail(w, r, fmt.Errorf("%s: %w", op, err))
+		return
+	}
+
+	search := request.GetQuerySearch(r)
+	sessions, pagination, err := s.sessionSrvc.List(
+		r.Context(),
+		user,
+		search.Pagination.Page,
+		search.Pagination.Count,
+	)
+	if err != nil {
+		response.JsonFail(w, r, fmt.Errorf("%s: %w", op, err))
+		return
+	}
+
+	response.JsonList(w, r, sessions, pagination)
 }
 
 // @Summary start test session
@@ -62,4 +109,56 @@ func (s *session) create(w http.ResponseWriter, r *http.Request) {
 	}
 
 	response.JsonSuccess(w, r, http.StatusCreated, session)
+}
+
+// @Summary finish the session with summary
+// @Tags sessions
+// @Security BearerAuth
+// @Router /v1/sessions/{id}/summarize [post]
+// @Param id path string true "session id"
+// @Produce json
+// @Success 200 {object} response.success{data=model.Session}
+func (s *session) summarize(w http.ResponseWriter, r *http.Request) {
+	const op = "v1.session.summarize"
+
+	user, err := request.GetAuthUser(r)
+	if err != nil {
+		response.JsonFail(w, r, fmt.Errorf("%s: %w", op, err))
+		return
+	}
+
+	id := r.PathValue("id")
+	session, err := s.sessionSrvc.Summarize(r.Context(), user, id)
+	if err != nil {
+		response.JsonFail(w, r, fmt.Errorf("%s: %w", op, err))
+		return
+	}
+
+	response.JsonSuccess(w, r, http.StatusOK, session)
+}
+
+// @Summary finish the session without summary
+// @Tags sessions
+// @Security BearerAuth
+// @Router /v1/sessions/{id}/cancel [post]
+// @Param id path string true "session id"
+// @Produce json
+// @Success 200 {object} response.success{data=model.Session}
+func (s *session) cancel(w http.ResponseWriter, r *http.Request) {
+	const op = "v1.session.cancel"
+
+	user, err := request.GetAuthUser(r)
+	if err != nil {
+		response.JsonFail(w, r, fmt.Errorf("%s: %w", op, err))
+		return
+	}
+
+	id := r.PathValue("id")
+	session, err := s.sessionSrvc.Cancel(r.Context(), user, id)
+	if err != nil {
+		response.JsonFail(w, r, fmt.Errorf("%s: %w", op, err))
+		return
+	}
+
+	response.JsonSuccess(w, r, http.StatusOK, session)
 }
